<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <Button
        android:id="@+id/homePlaceOrderbtn"
        android:layout_width="300dp"
        android:layout_height="100dp"

        android:layout_marginTop="70dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/orange_for_buttons"
        android:shadowRadius="10"
        android:text="@string/homePlaceOrderBtn"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/homeReservationbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57" />

    <Button
        android:id="@+id/homeReservationbtn"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginBottom="11dp"
        android:backgroundTint="@color/orange_for_buttons"
        android:text="@string/homeReservationBtn"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/homeRecipebtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homePlaceOrderbtn" />

    <Button
        android:id="@+id/homeRecipebtn"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/orange_for_buttons"
        android:text="@string/homeRecipesBtn"
        android:textAllCaps="false"
        android:textSize="25dp"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/homeContactbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeReservationbtn" />

    <Button
        android:id="@+id/homeContactbtn"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/orange_for_buttons"
        android:text="@string/homeContactUs"
        android:textAllCaps="false"
        android:textSize="25dp"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeRecipebtn" />

    <Button
        android:id="@+id/Adminloginbtn"
        android:layout_width="81dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/orange_for_inputs"
        android:text="@string/homeLoginAdmin"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="10dp"
        android:textStyle="bold"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/homePageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/homePageTitle"
        android:textColor="@color/black"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/homePlaceOrderbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98" />

</androidx.constraintlayout.widget.ConstraintLayout>